# flat-hunt

./: .gitignore  README.md  pyproject.toml
flat_hunt/: scrapy.cfg
flat_hunt/flat_hunt/: item_loaders.py  items.py  middlewares.py  pipelines.py  settings.py
flat_hunt/flat_hunt/spiders/: immobilier_ch.py
