[tool.poetry]
name = "flat-hunt"
version = "0.1.0"
description = ""
authors = ["NanoClem <clemdecoop.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
